--- a/home.html
+++ b/home.html
@@ -14,9 +14,10 @@
 		<main>
 		<div id="recipelist">
 			<ul>
-				<li><a href="recipetemplate.html"><span class="recipe">Recipe R1</span></a> by Team Member T1</li>
-				<li><a href="recipetemplate.html"><span class="recipe">Recipe R2</span></a> by Team Member T2</li>
-				<li><a href="recipetemplate.html"><span class="recipe">Recipe R3</span></a> by Team Member T3</li>
+				<li><a href="recipetemplate.html"><span class="recipe">Recipe R1</span></a> by Anthony Chatfield</li>
+				<li><a href="recipetemplate.html"><span class="recipe">Recipe R2</span></a> by Eboni Smith</li>
+				<li><a href="recipetemplate.html"><span class="recipe">Recipe R3</span></a> by Rob Kramlich</li>
+				<li><a href="recipetemplate.html"><span class="recipe">Recipe R3</span></a> by Lindsey Moore</li>
 			</ul>
 		</div>
 		</main>
