changed group name on home.html

--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="wrapper">
 		<header>
-			<h1>Recipes by Team X</h1>
+			<h1>Recipes by Group 2!</h1>
 		</header>
 		<main>
 		<div id="recipelist">
