--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 		<div id="recipelist">
 			<ul>
 				<li><a href="recipetemplate.html"><span class="recipe">Recipe R1</span></a> by Anthony Chatfield</li>
-				<li><a href="recipetemplate.html"><span class="recipe">Recipe R2</span></a> by Eboni Smith</li>
+				<li><a href="recipetemplate.html"><span class="recipe">Recipe R2</span></a> by Eboni Smith-Golden</li>
 				<li><a href="recipetemplate.html"><span class="recipe">Recipe R3</span></a> by Rob Kramlich</li>
 				<li><a href="recipetemplate.html"><span class="recipe">Recipe R3</span></a> by Lindsey Moore</li>
 			</ul>
