--- a/bananabread.html
+++ b/bananabread.html
@@ -17,11 +17,40 @@
 			by Eboni Smith-Golden
 			<h3>Ingredients</h3>
 			<ul>
-				<li>1 cup ...</li>
-				<li>...</li>
+				<li>2 to 3 medium (7" to 7-7/8" long) very ripe bananas, peeled (about 1 1/4 to 1 1/2 cups mashed)</li>
+				<li>1/3 cup (76g) butter, unsalted or salted, melted</li>
+				<li>1/2 teaspoon baking soda (not baking powder)</li>
+				<li>1 pinch salt</li>
+				<li>3/4 cup (150g) sugar (1/2 cup if you would like it less sweet, 1 cup if more sweet)</li>
+				<li>1 large egg, beaten</li>
+				<li>1 teaspoon vanilla extract</li>
+				<li>1 1/2 cups (205g) all-purpose flour</li>
 			</ul>
 			<h3>Directions</h3>
-			Combine ...
+			First, preheat the oven and prepare the pan:
+Preheat the oven to 350°F (175°C), and butter an 8 x 4-inch loaf pan.
+
+Then, mash the bananas and add the butter:
+In a mixing bowl, mash the ripe bananas with a fork until completely smooth. 
+Stir the melted butter into the mashed bananas.
+
+Next, mix in the remaining ingredients:
+Mix in the baking soda and salt. 
+Stir in the sugar, beaten egg, and vanilla extract. 
+Mix in the flour.
+
+After, bake the bread:
+Pour the batter into your prepared loaf pan.
+Bake for 55 to 65 minutes at 350°F (175°C), or until a toothpick or wooden skewer inserted into the center comes out clean.
+ A few dry crumbs are okay; streaks of wet batter are not. 
+ If the outside of the loaf is browned but the center is still wet, loosely tent the loaf with foil and continue baking until the loaf is fully baked.
+
+ Last, Cool and serve:
+ Remove from oven and let cool in the pan for a few minutes.
+  Then remove the banana bread from the pan and let cool completely before serving. 
+ Slice and serve. (A bread knife helps to make slices that aren't crumbly.)
+ Wrapped well, the banana bread will keep at room temperature for 4 days. 
+ For longer storage, refrigerate the loaf up to 5 days, or freeze it.
 		</div>
 		</main>
 	</div>
