minor hompage list item updates

--- a/home.html
+++ b/home.html
@@ -16,8 +16,8 @@
 			<ul>
 				<li><a href="recipetemplate.html"><span class="recipe">Recipe R1</span></a> by Anthony Chatfield</li>
 				<li><a href="bananabread.html"><span class="recipe">Banana Bread</span></a> by Eboni Smith-Golden</li>
-				<li><a href="spamfries.html"><span class="recipe">Recipe R3</span></a> by Rob Kramlich</li>
-				<li><a href="recipetemplate.html"><span class="recipe">Recipe R3</span></a> by Lindsey Moore</li>
+				<li><a href="spamfries.html"><span class="recipe">Air-Fried SPAM Fries</span></a> by Rob Kramlich</li>
+				<li><a href="recipetemplate.html"><span class="recipe">Recipe R4</span></a> by Lindsey Moore</li>
 			</ul>
 		</div>
 		</main>
