--- a/recipe_ac.html
+++ b/recipe_ac.html
@@ -13,15 +13,20 @@
 		</header>
 		<main>
 		<div id="recipes">
-			<h2>Recipe Name</h2>
-			by Team Member
+			<h2>Roasted Asparagus</h2>
+			by Anthony Chatfield
 			<h3>Ingredients</h3>
 			<ul>
-				<li>1 cup ...</li>
-				<li>...</li>
+				<li>1 bunch of thin asparagus spears, trimmed</li>
+				<li>4 tablespoons of olive oil</li>
+				<li>2 tablespoons of parmesan cheese</li>
+				<li>2 teaspoons of salt</li>
+				<li>1 teaspoon of pepper</li>
+				<li>1 clove of garlic, minced</li>
 			</ul>
 			<h3>Directions</h3>
-			Combine ...
+			Preheat oven to 425. Place everything in a bow except the asparagus and mix. Toss asparagus in bowl.
+			Seperate asparagus on a baking sheet so that none overlap. Bake 15 minutes.
 		</div>
 		</main>
 	</div>
